2007-05-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* ctext.tcl (ctext::linemapUpdate): make the ctext linemap not
	resize - it maintains the widest size necessary

2006-10-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	ctext.man updated - -linemap clarified, example reformatted (smaller
	width, for better display and printing), added configure subcommand

2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	*

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	*

2005-04-07  Andreas Kupries <andreask@activestate.com>

	* ctext.man: Fixed formatting bugs in ctext.man

3.1.6 - Wed Apr  6 04:41:13 GMT 2005

	ctext.man was kindly contributed by
	Michael Schlenker.  Thanks Michael :)


3.1.5 - Mon Mar 21 11:23:09 GMT 2005

	ctext_tcl.tcl was contributed to ctext by
	Uwe Koloska.  It provides easy syntax
	highlighting for Tcl scripts.  He has apparently
	added ctext to Nagelfar.
	http://spjuth.pointclark.net/Nagelfar.html

3.1.4 - Thu Aug 12 03:10:06 UTC 2004

	ctext.tcl was changed to fix a bug that
	occured when the geometry management of the
	ctext widget was such that it wouldn't enlarge
	when [$inst configure -linemap 1] was invoked.

	This was fixed using grid and a -minsize.  The
	previous manager was pack.  Grid behaves in an
	appropriate manner for this situation with the
	proper weights and -minsize.

	Thanks to Arjen Markus for testing and bringing
	this up.


3.1.3 - Thu Jan 22 14:51:08 GMT 2004

	I changed the bindtags so that binding to
	the parent frame will cause the child $win.t
	to invoke those bindings.  This means that
	you can create menus that popup on
	ButtonPress-3 without having to use bind.tree
	or a similar mechanism.  Thank Jeff Hobbs
	for pointing this out.
	
	I fixed the destroy event handling, so that
	it will now not cleanup the widget when a